# LightOps

./: .gitignore  CHANGELOG.md  CONTEXT.md  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
backend/lightops/: api.py  backups.py  cli.py  config.py  deployments.py  history.py  insights.py  migrations.py  schemas.py  (+8 more)
deployment-templates/: docker-compose.yaml  go.yaml  laravel.yaml  node.yaml  php.yaml  python.yaml  spring-boot.yaml  static.yaml
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
installer/: common.sh  install.sh  rollback.sh  uninstall.sh  update.sh
manifests/: apache.yaml  caddy.yaml  certbot.yaml  composer.yaml  containerd.yaml  cron.yaml  curl.yaml  docker-compose.yaml  docker.yaml  fail2ban.yaml  firewalld.yaml  git.yaml  go.yaml  htop.yaml  iftop.yaml  iotop.yaml  java.yaml  jq.yaml  lm-sensors.yaml  mariadb.yaml  mongodb.yaml  mysql.yaml  ncdu.yaml  net-tools.yaml  nginx.yaml  nodejs.yaml  npm.yaml  php.yaml  pip.yaml  pipx.yaml  pm2.yaml  pnpm.yaml  podman.yaml  postgresql.yaml  python.yaml  redis.yaml  rsync.yaml  rust.yaml  smartmontools.yaml  supervisor.yaml  (+5 more)
migrations/: README.md
systemd/: lightops.env  lightops.service  lightops.sudoers
tests/: conftest.py  test_api.py  test_auth.py  test_backup_api.py  test_bootstrap.py  test_cli.py  test_deployments.py  test_frontend.py  test_migrations.py  test_notifications.py  test_operations.py  test_operations_api.py  test_projects_api.py  test_release_transition.py  test_totp.py
(+4 files in other folders)
