[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lightops"
version = "0.1.2"
description = "Lightweight Linux server operations platform"
requires-python = ">=3.10"
dependencies = [
  "APScheduler>=3.10,<4",
  "cryptography>=42,<47",
  "fastapi>=0.110,<1",
  "pydantic>=2.6,<3",
  "psutil>=5.9,<8",
  "PyYAML>=6,<7",
  "sqlalchemy>=2,<3",
  "uvicorn>=0.29,<1",
]

[project.optional-dependencies]
dev = ["httpx>=0.27,<1", "pytest>=7.4,<9"]
postgres = ["psycopg[binary]>=3.1,<4"]

[project.scripts]
lightops = "lightops.cli:main"
lightops-api = "lightops.api:run"
lightops-privileged = "lightops.privileged:main"
lightops-migrate = "lightops.migrations:main"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
